--- a/projeto felis/style.css
+++ b/projeto felis/style.css
@@ -1,8 +1,338 @@
-@charset "UTF-8";
-/* *{
-    margin:0px;
-    padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
+
 }
-body{
-    background-image:url('fotos/bg\ image.png');
-}*/
+
+body {
+  background-image: url('fotos/bg\ image.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+
+
+}
+
+#corpo {
+  margin: 30px 90px;
+  background-color: white;
+
+}
+
+header {
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+
+}
+
+header nav {
+  font-family: 'helvitica';
+  padding-top: 30px;
+  font-weight: 400;
+  margin: auto;
+
+}
+
+header a {
+  color: black;
+  text-decoration: none;
+  padding: 10px;
+}
+
+span#borda0 {
+  box-sizing: border-box;
+  position: absolute;
+  width: 28px;
+  height: 28px;
+  left: 1200;
+  top: 70px;
+  border: 0.6px solid #1D1B19;
+  border-radius: 50%;
+  padding: 5px 8px 8px 9px;
+}
+
+header h1 {
+  padding-top: 20px;
+  padding-right: px;
+  font-family: 'Selna';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 52.9025px;
+}
+
+a#cart {
+  margin-right: 25px;
+}
+
+main {
+
+  padding-top: 8px;
+
+
+}
+
+div.mainstart {
+  display: flex;
+  width: 100%;
+
+}
+
+#culher {
+  width: 100%;
+}
+
+div.ceumain {
+  width: 53%;
+
+  justify-content: space-between;
+  align-items: center;
+
+
+}
+
+div.ceumain p {
+  position: absolute;
+  width: 531px;
+  height: 157px;
+  left: 1015px;
+  top: 371px;
+
+}
+
+.textmain {
+  width: 45%;
+  align-items: center;
+  text-align: center;
+
+
+
+}
+
+.textmain p {
+  margin-top: 207px;
+  font-size: 30px;
+}
+
+div.textmain a {
+  color: black;
+  margin-top: 40px;
+}
+
+div.topcenter {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+
+}
+
+div.topcenter h1 {
+  font-family: 'Selna';
+  font-style: normal;
+  font-weight: 400;
+
+}
+
+div.topcenter a {
+  padding-top: 8px;
+  padding-right: 20px;
+  color: black;
+  font-style: normal;
+  font-size: 20.1783px;
+  font-weight: 400;
+}
+
+div.topcenter h1 {
+  padding-left: 40px;
+}
+
+div.fundomain {
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+#fotosP {
+  width: 200px;
+  height: 200px;
+}
+
+div.bottom-main {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 20px 0px 30px;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+  margin-left: 30px;
+}
+
+div.bottom-main2 {
+  display: flex;
+  flex-flow: column;
+}
+
+div.bottom-main p {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20.2035px;
+  line-height: 23px;
+  text-transform: uppercase;
+
+}
+
+div.bottom-main span {
+  font-size: 22px;
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20.2035px;
+  line-height: 23px;
+  text-transform: uppercase;
+
+  color: rgba(29, 27, 25, 0.72);
+
+}
+
+
+
+div.imagem3 {
+
+  text-align: center;
+  align-items: center;
+}
+
+div.imagem3 img {
+  width: 200px;
+  height: 200px;
+
+}
+
+div.imagem3 p {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 25px;
+  color: #1D1B19;
+}
+
+div.imagem3 span {
+  padding-right: 100px;
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20.2035px;
+  line-height: 23px;
+  text-transform: uppercase;
+
+  color: rgba(29, 27, 25, 0.72);
+}
+
+div.trisal {
+  display: flex;
+  justify-content: space-around;
+
+}
+
+div .trisaltext {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+div.trisaltext h1 {
+  font-family: 'Selna';
+  font-style: normal;
+  font-size: 34px;
+  line-height: 63px;
+  text-transform: uppercase;
+  font-weight: 400;
+
+
+
+  color: #1D1B19;
+}
+
+div .trisal img {
+  width: 200px;
+  height: 300px;
+
+}
+
+div .trisalfoto2 {
+  margin-top: 205px;
+}
+
+div.aboutcorpo {
+  display: flex;
+  margin-top: 65px;
+  margin-right: 13px;
+}
+
+div.aboutfoto p {
+  font-size: 20px;
+}
+
+div.aboutfoto img {
+  width: 340px;
+  border-radius: 299px 299px 0px 0px;
+}
+
+div.aboutus {
+  padding: 0px 30px;
+}
+
+div.aboutfoto {
+  padding-right: 36px
+}
+
+div.aboutus h1 {
+  font-family: 'Selna';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 85px;
+  text-transform: uppercase;
+
+  color: #1D1B19;
+}
+
+div.aboutus p {
+  font-family: 'Helvetica';
+  font-size: 20px;
+  line-height: 158.9%;
+
+
+  text-transform: lowercase;
+
+  color: #1D1B19;
+
+}
+
+div.aboutus a {
+  padding-top: 20px;
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20.1783px;
+  line-height: 23px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #1D1B19;
+
+}
+
+
+@media screen and (max-width: 1032px) {
+
+  div.aboutcorpo p {
+    font-size: 15px;
+  }
+
+}
