--- a/Projetos/style2.css
+++ b/Projetos/style2.css
@@ -80,6 +80,9 @@ main p {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
+article h1, p, h2{
+    padding: 20px 0px 10px 0px;
+}
 
 article img {
     width: 100%;
@@ -90,6 +93,7 @@ aside {
     background-color: darkgrey;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
+    
 
 }
 
