novos projetos e att
adicionei novos projetos e atualizei o codigo de alguns

--- a/prejetoredesocias/pacote-d013/estilos/style.css
+++ b/prejetoredesocias/pacote-d013/estilos/style.css
@@ -38,5 +38,20 @@ iframe#tela{
     top: 81px;
     left: 22px;
     height: 470px;
-    width: 268px;
+    width: 267px;
+}
+section.redes-sociais{
+    text-align: end;
+}
+section.redes-sociais img{
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400 );
+    box-sizing: border-box;
+}
+section.redes-sociais img:hover{
+   border: 2px solid rgba(255, 255, 255, 0.637);
+   
 }
