--- a/projeto felis/style.css
+++ b/projeto felis/style.css
@@ -1,243 +1,161 @@
 * {
   margin: 0px;
   padding: 0px;
+  text-decoration: none;
 
 }
 
-body {
-  background-image: url('fotos/bg\ image.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-
-
-}
-
-#corpo {
-  margin: 30px 90px;
-  background-color: white;
-
-}
-
-header {
+div.cabecalho {
   display: flex;
-  margin: auto;
   justify-content: space-between;
 
+
 }
 
-header nav {
-  font-family: 'helvitica';
-  padding-top: 30px;
+div.cabecalho nav {
+  padding: 35px;
+  display: flex;
+  gap: 20px;
+}
+
+div.cabecalho a {
+  font-family: 'Helvetica';
+  font-style: normal;
   font-weight: 400;
-  margin: auto;
-
+  font-size: 16.9628px;
+  line-height: 20px;
+  align-items: center;
+  text-align: center;
+  color: #1D1B19;
 }
 
-header a {
-  color: black;
-  text-decoration: none;
-  padding: 10px;
-}
-
-span#borda0 {
-  box-sizing: border-box;
-  position: absolute;
-  width: 28px;
-  height: 28px;
-  left: 1200;
-  top: 70px;
-  border: 0.6px solid #1D1B19;
-  border-radius: 50%;
-  padding: 5px 8px 8px 9px;
-}
-
-header h1 {
-  padding-top: 20px;
-  padding-right: px;
+h1.cabecalho-titulo {
   font-family: 'Selna';
   font-style: normal;
   font-weight: 400;
   font-size: 52.9025px;
-}
-
-a#cart {
-  margin-right: 25px;
-}
-
-main {
-
-  padding-top: 8px;
-
-
-}
-
-div.mainstart {
+  line-height: 90px;
   display: flex;
-  width: 100%;
-
-}
-
-#culher {
-  width: 100%;
-}
-
-div.ceumain {
-  width: 53%;
-
-  justify-content: space-between;
-  align-items: center;
-
-
-}
-
-div.ceumain p {
-  position: absolute;
-  width: 531px;
-  height: 157px;
-  left: 1015px;
-  top: 371px;
-
-}
-
-.textmain {
-  width: 45%;
-  padding-top: 160px;
   align-items: center;
   text-align: center;
-  padding-left: 200px;
 
-
+  color: #1D1B19;
 
 }
 
+.cabecalho-circle {
+  border: 0.6px solid #1D1B19;
+  border-radius: 50%;
+  padding: 5px;
+  box-sizing: border-box;
 
-.textmain h1 {
-
-padding-top: 20px;
-padding-right: 175px;
-font-family: 'Selna';
-font-style: normal;
-font-weight: 400;
-font-size: 52.844px;
-line-height: 80px;  
-display: flex;
-  
 }
 
-div.textmaina a {
-  color: black;
-  font-family: 'Proxima Nova';
-font-style: normal;
-font-weight: 400;
-font-size: 20.1783px;
-line-height: 25px;
-  
-}
-div.textmaina{
-  align-items: center;
-  margin-top: 20px;
-  padding-right:200px;
-}
-
-div.topcenter {
+div.main-top {
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-  padding-bottom: 40px;
-  padding-top: 40px;
 
 }
 
-div.topcenter h1 {
+div.main-top-text {
+  display: flex;
+  flex-direction: column;
+  padding: 250px 0px 0px 100px;
+
+}
+
+div.main-top-text img {
+  width: 48px;
+  height: 48px;
+  padding-left: 200px;
+}
+
+h2.main-top-title {
   font-family: 'Selna';
   font-style: normal;
   font-weight: 400;
-
-}
-
-div.topcenter a {
-  padding-top: 8px;
-  padding-right: 20px;
-  color: black;
-  font-style: normal;
-  font-size: 20.1783px;
-  font-weight: 400;
-}
-
-div.topcenter h1 {
-  padding-left: 40px;
-}
-
-div.fundomain {
+  font-size: 62.844px;
+  line-height: 80px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  text-align: center;
 
+  color: #1D1B19;
+}
+
+div.main-top p {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #1D1B19;
+  margin: 30px 0px 0px 182px;
+  width: 81px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #1D1B19;
+  ;
 
 }
 
-#fotosP {
-  width: 200px;
-  height: 266px;
-}
-
-div.bottom-main {
+div.main-top-min {
   display: flex;
   justify-content: space-between;
-  margin: 20px 20px 0px 30px;
-  margin-top: 20px;
-  margin-right: 20px;
-  margin-bottom: 0px;
-  margin-left: 30px;
+  padding: 70px 30px 30px 30px;
+
 }
 
-div.bottom-main2 {
+div.main-top-min>p {
+  font-family: 'Selna';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 85px;
+  text-transform: uppercase;
+  color: #1D1B19;
+
+}
+
+div.main-top-min2>p {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20.1783px;
+  line-height: 23px;
   display: flex;
-  flex-flow: column;
-}
-
-div.bottom-main p {
-  font-family: 'Helvetica';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20.2035px;
-  line-height: 23px;
-  text-transform: uppercase;
-
-}
-
-div.bottom-main span {
-  font-size: 22px;
-  font-family: 'Helvetica';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20.2035px;
-  line-height: 23px;
-  text-transform: uppercase;
-
-  color: rgba(29, 27, 25, 0.72);
-
-}
-
-
-div.imagem3 {
-
-  text-align: center;
   align-items: center;
+  text-align: center;
+  padding-top: 20px;
+  border-bottom: 1px solid #1D1B19;
+  ;
+  color: #1D1B19;
+
 }
 
+div.main-mid {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 40px 10px 30px;
+}
 
-div.imagem3 p {
+div.main-mid img {
+  height: 450px;
+}
+
+div.main-mid p {
   font-family: 'Helvetica';
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
   line-height: 25px;
+
   color: #1D1B19;
+
 }
 
-div.imagem3 span {
-  padding-right: 100px;
+div.main-mid span {
   font-family: 'Helvetica';
   font-style: normal;
   font-weight: 400;
@@ -248,231 +166,227 @@ div.imagem3 span {
   color: rgba(29, 27, 25, 0.72);
 }
 
-div.trisal {
-  display: flex;
-  justify-content: space-around;
-  padding-bottom: 80px;
-  padding-top: 80px;
-
-}
-
-div .trisaltext {
-  display: flex;
-  align-items: center;
+div.main-mid3 {
   text-align: center;
-  text-transform: uppercase;
+  margin-bottom: 100px;
 }
 
-div.trisaltext h1 {
-  font-family: 'Selna';
+div.main-mid3 img {
+  height: 450px;
+}
+
+div.main-mid3 p {
+  font-family: 'Helvetica';
   font-style: normal;
-  font-size: 34px;
-  line-height: 63px;
-  text-transform: uppercase;
   font-weight: 400;
-
-
+  font-size: 22px;
+  line-height: 25px;
 
   color: #1D1B19;
 }
 
-div .trisal img {
-  width: 200px;
-  height: 300px;
+div.main-mid3 input {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20.2035px;
+  line-height: 23px;
+  text-transform: uppercase;
 
-
+  color: rgba(29, 27, 25, 0.72);
 }
 
-div .trisalfoto2 {
-  margin-top: 205px;
-}
-
-div.aboutcorpo {
+div.main-midi {
   display: flex;
-  margin-top: 65px;
-  margin-right: 13px;
-  padding-top: 80px;
+  justify-content: space-around;
 }
 
-div.aboutfoto p {
-  font-size: 20px;
+div.main-midi>img {
+  height: 463px;
 }
 
-div.aboutfoto img {
-  width: 340px;
-  height: 400px;
-  border-radius: 299px 299px 0px 0px;
+div.main-midi-text {
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+  font-family: 'Selna';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 56.377px;
+  line-height: 96px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #1D1B19;
 }
 
-div.aboutus {
-  padding: 0px 30px;
-
+div.main-midi-img2 {
+  padding-top: 250px;
 }
 
-div.aboutfoto {
-  padding-right: 36px;
-  height: 400px;
-
+div.main-med-top {
+  display: flex;
+  justify-content: space-between;
+  margin: 100px 10px 40px 10px;
 }
 
-div.aboutus h1 {
+div.main-med {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 50px;
+  margin-left: 40px;
+}
+
+.main-med-title {
   font-family: 'Selna';
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
   line-height: 85px;
   text-transform: uppercase;
-
   color: #1D1B19;
 }
 
-div.aboutus p {
+.main-med-text {
   font-family: 'Helvetica';
-  font-size: 20px;
+  font-size: 27px;
   line-height: 158.9%;
-
-
   text-transform: lowercase;
-
   color: #1D1B19;
-
 }
 
-div.aboutus a {
-  padding-top: 20px;
+.main-med-link {
   font-family: 'Helvetica';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 5 00;
   font-size: 20.1783px;
   line-height: 23px;
   display: flex;
   align-items: center;
   text-align: center;
-
   color: #1D1B19;
+  border-bottom: 1px solid black;
+  width: 130px;
+  margin-top: 20px;
 
 }
-div.mainfinalfoto{
-  padding-bottom: 50px;
+
+div.main-med-top img {
+  height: 600px;
+  border-top-right-radius: 200px;
+  border-top-left-radius: 200px;
+  margin-right: 20px;
+
 }
 
-div.mainfinal h1 {
+div.main-bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   text-align: center;
+  margin: 50px 0px 50px 0px;
+}
+
+div.main-bottom img {
+  height: 46px;
+  width: 46px;
+  padding-left: 190px;
+
+
+}
+
+div.main-bottom input {
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  width: 400px;
+}
+
+div.main-bottom h2 {
   font-family: 'Selna';
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
   line-height: 85px;
-  padding-top: 90px;
-  padding-bottom: 80px;
+
+
+  text-transform: uppercase;
+  text-align: center;
+  color: #1d1b19da;
 }
 
-div.mainfinal2 h1 {
-  text-align: center;
+div.main-bottom img,
+input {
+  margin-left: 450px;
+}
+
+div.main-bottom2 {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin: 200px 0px 30px 300px;
+
+}
+
+div.main-bottom2 p {
   font-family: 'Selna';
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
-  line-height:85px;
-  padding-bottom: 35px;
-  padding-top: 80px;
-}
-
-div.mainfinalfoto {
-  text-align: center;
-  padding-bottom: 80px;
-  padding-top: 80px;
-}
-
-div.mainfinalfoto img {
-  text-align: center;
-  height: 400px;
-} 
-div.imput{
-  padding: 90px 90px;
-  text-align: center;
-}
-input{
-
-    border-block-start-style: none;
-    border-left-style: none;
-    border-right-style: none;
-    border-color: black;
-    
-}
-button{
-  background: none;
-  border-top: none;
-    border-right: none;
-    border-left: none;
-}
-div.imput p{
-  margin-left: 395px;
-  
-}
-div.imput span{
-  padding-left: 45px;
-}
-footer{
-  padding-top:20px;
-}
-
-div.footerd {
+  line-height: 85px;
   display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  color: #1D1B19;
+
+}
+
+div.trisal-bottom {
+  display: flex;
+  justify-content: space-evenly;
+  border-bottom: 1px solid #1D1B19;
+  ;
+  padding: 50px;
+  gap: -40px;
+}
+
+div.trisal-bottom img {
+  width: 300px;
+
+}
+
+div.final-felis {
+  display: flex;
+  justify-content: space-around;
+  margin: 50px;
+}
+.final-felis h1{
+  padding-left:150px;
   
 }
 
-div.footerd h1 {
-  font-family: 'selna';
-  padding-left: 30px;
-}
-
-div.tabelafooter {
-  display: flex;
-  list-style: none;
-  text-align: center;
-  padding-left: 210px;
-
-}
-
-div.tabelafooter>ul {
+div.final-felis ul {
   font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  align-items: center;
+  text-transform: uppercase;
+  font-feature-settings: 'liga' off, 'calt' off;
+  color: #1D1B19;
+ list-style: none;
+ margin-left: 200px;
+ 
+}
+
+.final-lista1 {
   columns: 2;
+  gap: 20px;
 }
-
-div.tabela2 {
-  font-family: 'helvetica';
-  display: flex;
-  padding-left: 20px;
-  padding-bottom: 180px;
-}
-
-div.tabelafooter ul {
-  list-style: none;
-}
-div.baaka p{
-  font-family: 'selna';
-  padding-left: 30px;
-  padding-bottom:15px;
-}
-img{
-  width: auto;
-}
-
-
-@media screen and (max-width: 1032px) {
-
-  div.aboutcorpo {
-    font-size: 15px;
-  }
-  div.ceumain{
-    font-size: 30px;
-  }
-
-}
-@media screen and (min-width: 300px) {
-  #culher {
-    font-size: larger;
-  }
-
+.final-lista2{
+  margin-right:550px;
 }
